# WPEPluginAVS

./: AVS.config  AVS.cpp  AVS.h  AVSJsonRpc.cpp  AVSPlugin.json  AVSPlugin.md  CMakeLists.txt  Module.h
AVSClient/include/: ThunderInputManager.h  ThunderLogger.h
AVSClient/include/AVSDevice/: SampleApplication.h  SampleApplicationReturnCodes.h  ThunderVoiceHandler.h
AVSClient/include/SmartScreen/: SampleApplication.h  ThunderVoiceHandler.h
AVSClient/include/SmartScreen/GUI/: GUIClient.h
AVSClient/src/: CMakeLists.txt  ThunderInputManager.cpp  ThunderLogger.cpp
AVSClient/src/AVSDevice/: CMakeLists.txt  GuiRenderer.cpp  PortAudioMicrophoneWrapper.cpp  SampleApplication.cpp  SampleEqualizerModeController.cpp  ThunderVoiceHandler.cpp  UIManager.cpp  UserInputManager.cpp  main.cpp
AVSClient/src/SmartScreen/: CMakeLists.txt  JsonUIManager.cpp  SampleApplication.cpp  SampleEqualizerModeController.cpp  ThunderVoiceHandler.cpp
AVSClient/src/SmartScreen/GUI/: GUIClient.cpp
Impl/: PryonKeywordDetector.cpp  ThunderVoiceHandler.h
Impl/AVSDevice/: AVSDevice.cpp  AVSDevice.h  CMakeLists.txt  ThunderInputManager.cpp  ThunderInputManager.h
Impl/SmartScreen/: CMakeLists.txt  SmartScreen.cpp  SmartScreen.h
Integration/: CMakeLists.txt
Integration/RaspberryPi3/: AlexaClientSDKConfig.json
